authorization-server/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: microservices
spec:
  ingressClassName: ingress
  rules:
    - host: internet-bank.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authorization-server-svc
                port:
                  number: 80
